--- a/mystyle.css
+++ b/mystyle.css
@@ -8,7 +8,7 @@ a {
 	text-decoration: none;
 }
 Body{
-	background-image: url("Moutain-Laurel-030416.jpg");
+	background-image: url("Background ARS final.png");
 	font-family: "Comic Sans MS", Helvetica, sans-serif;
 	font-size: 16px;
 	color: #344444;
